# slack-assistant

./: .env  .env.example  .envrc  .gitignore  LICENSE  README.md  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
.claude/logs/: subagent-history.jsonl
.claude/memory/: session-log.md
.github/workflows/: deploy.yml
docs/: agentcore_runtime_handler.py  api-specification.md  conversation_agent.py  create_memory.py  graph.py  implementation-plan.md  ingress_lambda.py  manifest.json  post_to_slack_lambda.py  router_agent.py  slack-strands-agentcore-architecture.md  state_machine_definition.json
lib/constructs/: apigateway.ts  bedrock-agentcore-runtime.ts  index.ts  lambda.ts  utility.ts
lib/stacks/: stateful.ts  stateless.ts
src/lambda/agentcore-strands/: Dockerfile  graph.py  handler.py  prompt_loader.py  pyproject.toml  requirements.txt
src/lambda/agentcore-strands/agents/: __init__.py  conversation_agent.py  router_agent.py
src/lambda/ingress/: handler.py  pyproject.toml  requirements.txt  ssm_params.py
src/lambda/invoke-agentcore/: handler.py  pyproject.toml  requirements.txt
src/lambda/post-to-slack/: handler.py  pyproject.toml  requirements.txt  ssm_params.py
