[project]
name = "invoke-agentcore"
version = "0.1.0"
description = "AgentCore Runtime Invoker Lambda"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "moto>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
